CocacolaProjectBackUp07/src/objects/ThreeYearCashSpend__c.object
<CustomObject>
    <fields>
        <fullName>IncrementalVolumebyYear__c</fullName>
        <label>Incremental Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1CashSpendFunc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q1 Cash Spend (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2CashSpendFunc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q2 Cash Spend (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3CashSpendFunc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q3 Cash Spend (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFA__c</fullName>
        <label>RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipName>Three_Year_Cash_Spend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report_Annual_Cash_Spend_000JPY__c</fullName>
        <formula>X3YearCashSpendFunc__c  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Cash Spend (000JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3YearCashSpendFunc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Annual Cash Spend (JPY)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Three Year Cash Spend</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Details-{00000000}</displayFormat>
        <label>Cash Spend Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Three Year Cash Spend</pluralLabel>
    <recordTypes>
        <fullName>Additional_Years</fullName>
        <active>true</active>
        <description>New Recordtype for Additional Years</description>
        <label>Additional Years</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Total_check_for_all_spend</fullName>
        <active>true</active>
        <errorConditionFormula>If (((Q1CashSpendFunc__c == 0 || ISNULL(Q1CashSpendFunc__c)) &amp;&amp; 
(Q2CashSpendFunc__c == 0 || ISNULL(Q2CashSpendFunc__c)) &amp;&amp; 
(Q3CashSpendFunc__c == 0 || ISNULL(Q3CashSpendFunc__c)) &amp;&amp; 
(Q4CashSpendFunc__c == 0 || ISNULL(Q4CashSpendFunc__c))), false, 
If (
If (NOT( ISBLANK(Q1CashSpendFunc__c)), Q1CashSpendFunc__c, 0) + If(NOT(ISBLANK(Q2CashSpendFunc__c)), Q2CashSpendFunc__c, 0) + 
If(NOT(ISBLANK(Q3CashSpendFunc__c)), Q3CashSpendFunc__c, 0) + 
If(NOT(ISBLANK(Q4CashSpendFunc__c)), Q4CashSpendFunc__c, 0) == X3YearCashSpendFunc__c , false, true))</errorConditionFormula>
        <errorMessage>The total of the Quarterly Spend amounts must equal the Annual Cash Spend amount.</errorMessage>
    </validationRules>
</CustomObject>